--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,16 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
@@ -21,10 +23,5 @@
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "nodemon": "^2.0.22"
-  },
-
-  "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
   }
 }
