--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "mysql2": "^3.11.0",
     "nodemo": "^1.0.0"
   }
